feat: group related routes
